apps/photos/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-ingress
  namespace: photos
spec:
  ingressClassName: cloudflare
  rules:
  - host: photos.krupa.net.pl
    http:
      paths:
      - backend:
          service:
            name: immich-server
            port:
              number: 2283
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - photos.krupa.net.pl
    secretName: immich-tls
